--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</nav>	
 	<header class="container to-padding">
 		<section class="row welcome">
-			<div class="col-12">
+			<div class="col-12 my-auto">
 				<h2>Adrian Korzan <br> Frontend Developer</h2>
 				<p>Tworzenie pięknych, prostych stron internetowych to moja pasja</p>
 			</div>
@@ -125,7 +125,8 @@
 		</div>
 	</section>
 	<!-- <hr> -->
-	<section class="contact" id="contact">
+	<!-- Contact -->
+	<!-- <section class="contact" id="contact">
 		<h2>Kontakt</h2>
 		<form>
 			<input placeholder="Imię/Nazwa" type="text"  value="" required>
@@ -136,7 +137,8 @@
 			</div>
 			<button>Wyślij</button>
 		</form>
-	</section>
+	</section> -->
+	<!-- /Contact -->
 	<!-- CV -->
 	<section class="cv">
 		<div class="container">
