--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 col-12 d-flex align-items-center">
-							<img src="./img/adriankorzan.jpg" alt="Mój wizerunek" class="rounded-circle mx-auto d-block">
+							<img src="./img/adriankorzan.jpg" alt="Mój wizerunek" class="mx-auto d-block">
 					</div>
 					<div class="col-md-8">
 						<p>Od wielu lat pasjonuję się tworzeniem stron internetowych. Po ukończeniu technikum informatycznego zacząłem zajmować się tym profesjonalnie. W przeciągu roku zrobiłem kilka komercyjnych projektów na Wordpress'ie po czym rozpocząłem kurs "JavaScript, FrontEnd Developer" w Akademii108 aby w dalszym ciągu rozwijać swoje umiejętności. Poznawanie nowych technologii jest moją pasją - dużą część swojego wolnego czasu przeznaczam na tutorial'e oraz blogi związane z tematyką Web Developing'u.</p>
@@ -126,18 +126,22 @@
 	</section>
 	<!-- <hr> -->
 	<!-- Contact -->
-	<!-- <section class="contact" id="contact">
+	<section class="contact" id="contact">
 		<h2>Kontakt</h2>
 		<form>
-			<input placeholder="Imię/Nazwa" type="text"  value="" required>
-			<input placeholder="Adres email" type="email" onblur="this.setAttribute('value', this.value);" value="" required>
-			<span class="validation-text">Nieprawidłowy adres email.</span>
+			<div class="flex">
+				<input placeholder="Imię/Nazwa" type="text"  value="" required>
+			</div>
+			<div class="flex">
+				<input placeholder="Adres email" type="email" onblur="this.setAttribute('value', this.value);" value="" required>
+				<span class="validation-text">Nieprawidłowy adres email.</span>
+			</div>
 			<div class="flex">
 				<textarea placeholder="Wiadomość" rows="1" required></textarea>
 			</div>
 			<button>Wyślij</button>
 		</form>
-	</section> -->
+	</section>
 	<!-- /Contact -->
 	<!-- CV -->
 	<section class="cv">
