--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	<!-- Contact -->
 	<section class="contact to-padding" id="contact">
 		<h2>Kontakt</h2>
-		<form action="https://formspree.io/email@domain.tld" method="POST">
+		<form action="https://formspree.io/adrian.korzan@gmail.com" method="POST">
 			<div class="flex">
 				<input placeholder="Imię/Nazwa" type="text"  value="" required name="Name">
 			</div>
