favicon, animation, new color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 	<title>FrontEnd Developer - Korzan Adrian</title>
 </head>
@@ -51,14 +53,14 @@
 		</div>
 	</header>
 	<!-- ABOUT ME -->
-	<section class="about-me to-padding" id="about">
+	<section class="about-me to-padding animated" id="about">
 			<div class="container">
-				<div class="col-12">
+				<div class="col-12 animated" id="myself-desc">
 					<h2>Cześć, jestem Adrian!</h2>
 				</div>
 				<div class="row">
-					<div class="col-md-4 col-12 d-flex align-items-center">
-							<img src="./img/adriankorzan.jpg" alt="Mój wizerunek" class="mx-auto d-block">
+					<div class="col-md-4 col-sm-12 d-flex align-items-center">
+							<img src="./img/adriankorzan_min.jpg" alt="Mój wizerunek" class="mx-auto d-block">
 					</div>
 					<div class="col-md-8">
 						<p>Od wielu lat pasjonuję się tworzeniem stron internetowych. Po ukończeniu technikum informatycznego zacząłem zajmować się tym profesjonalnie. W przeciągu roku zrobiłem kilka komercyjnych projektów na Wordpress'ie po czym rozpocząłem kurs "JavaScript, FrontEnd Developer" w Akademii108 aby w dalszym ciągu rozwijać swoje umiejętności. Poznawanie nowych technologii jest moją pasją - dużą część swojego wolnego czasu przeznaczam na tutorial'e oraz blogi związane z tematyką Web Developing'u.</p>
@@ -67,7 +69,7 @@
 			</div>
 		</section>
 		<!-- Umięjętności -->
-		<div class="container-fluid skills">
+		<div class="container-fluid skills animated" id="skills">
 				<div class="container card">
 					<h2>Umiejętności</h2>
 					<div class="row">
@@ -149,7 +151,7 @@
 	<footer>
 		<div class="container">
 			<div>
-				<h2>Znajdź mnie</h2>
+				<h2 class="animated infinite pulse">Znajdź mnie</h2>
 			</div>
 			<div class="circle">
 					<a href="https://www.linkedin.com/in/adrian-korzan-frontend-developer/" target="_blank"><i class="fab fa-linkedin"></i></a>
