--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>Tworzenie pięknych, prostych stron internetowych to moja pasja</p>
 			</div>
 		</section>
-		<div class="animated infinite pulse row down">
+		<div class="row down animated infinite pulse">
 			<div class="col-12">
 				<a href="#about">
 					<span>O mnie<br><i class="fas fa-angle-double-down"></i></span>
@@ -114,21 +114,20 @@
 		</div>
 		<div class="collapse" id="collapseSyriusz">
 			<div class="card card-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+					Początkowo strona została przeze mnie zaprojektowana oraz zakodowana bez systemu zarządzania treścią. Później przeniosłem ją na Wordpress'a. <a href="http://www.syriusz-serwis.pl" target="_blank">Odwiedź stronę</a>
 			</div>
 		</div>
 		<div class="collapse" id="collapseTuliroza">
 			<div class="card card-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+					Połączenie płatności "Przelewy24" ze sklepem internetowym (bez CMS) kwiaciarni. Zaprojektowanie bazdy danych z produktami. Dla praktyki zrobiłem identyczną stronę na wordpressie. <a href="http://www.tuliroza.pl" target="_blank">Odwiedź stronę</a>
 			</div>
 		</div>
 		<div class="collapse" id="collapseMojra">
 			<div class="card card-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+				Stworzenie strony internetowej dla "szkoły programowania dla najmłodszych". Strona została wykonana na Wordpressie. Stworzony został motyw potomny. Jego edycję ułatwiały mi: preprocesor CSS Less oraz Gulp. <a href="http://www.mojra.com.pl" target="_blank">Odwiedź stronę</a>
 			</div>
 		</div>
 	</section>
-	<!-- <hr> -->
 	<!-- Contact -->
 	<section class="contact to-padding" id="contact">
 		<h2>Kontakt</h2>
@@ -163,12 +162,9 @@
 	</footer>
 	<!-- /Footer -->
 	
-	<!-- <script src="./js/framekor.js"></script> -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/8cc4d693d1.js"></script>
-<script src="./js/main.js"></script>
+	<script src="./js/bootstrap.bundle.min.js"></script> 
+	<script src="https://kit.fontawesome.com/8cc4d693d1.js"></script>
+	<script src="./js/main-min.js"></script>
 </body>
 </html>
