Zmiana adresu tuliróży

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 		<div class="collapse" id="collapseTuliroza">
 			<div class="card card-body">
-					Połączenie płatności "Przelewy24" ze sklepem internetowym (bez CMS) kwiaciarni. Zaprojektowanie bazdy danych z produktami. Dla praktyki zrobiłem identyczną stronę na wordpressie. <a href="http://www.tuliroza.pl" target="_blank">Odwiedź stronę</a>
+					Połączenie płatności "Przelewy24" ze sklepem internetowym (bez CMS) kwiaciarni. Zaprojektowanie bazdy danych z produktami. Dla praktyki zrobiłem identyczną stronę na wordpressie. <a href="http://tuliroza.pl" target="_blank">Odwiedź stronę</a>
 			</div>
 		</div>
 		<div class="collapse" id="collapseMojra">
