--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top">
-		<a href="index.html" class="navbar__logo">WebKor</a>
+		<a href="index.html" class="navbar__logo">AK</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
