--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<meta property=”og:image” content=”https://korzanicho.github.io/Portfolio-AdrianKorzan/img/adriankorzan_min.jpg” >
+	<meta property="og:image" content="https://korzanicho.github.io/Portfolio-AdrianKorzan/img/adriankorzan_min.jpg">
 
 	<title>FrontEnd Developer - Korzan Adrian</title>
 </head>
